Issue #1573 - Conversão do WS SOAP perfilAcessoPorCPF para REST
